# self_reconfig_robot

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
deploy/systemd/: self-reconfig-health.service  self-reconfig-health.timer  self-reconfig-mock-stm32.service  self-reconfig-robot-sim.service  self-reconfig-ros2-bridge.service
docs/: architecture.md  control_design.md  embedded_linux_interview_guide.md  embedded_linux_upgrade_plan.md  hardware_integration_plan.md  interview_talk_track.md  interview_version.md  raspberry_pi_deploy.md  resume_autumn_recruit.md  resume_insert_self_reconfig_robot.md  resume_project.md  resume_project_order_suggestion.md  ros2_environment_setup.md  ros2_lower_fusion_upgrade.md  verification_checklist.md
include/robot/: control_state_writer.h  grid_map.h  json_utils.h  protocol.h  sensor_fusion.h  serial_port.h  types.h  udp_socket.h
ros2/: README.md
ros2/self_reconfig_control/: CMakeLists.txt  package.xml
ros2/self_reconfig_control/launch/: control_bridge.launch.py
ros2/self_reconfig_control/src/: control_state_publisher.cpp
scripts/: build_native.sh  build_ros2_bridge.sh  build_ros2_bridge_in_docker.sh  check_ros2_env.sh  check_ros2_topics_in_docker.sh  deploy_pi.ps1  deploy_ros2_scripts_pi.ps1  health_monitor.sh  install_ros2_jazzy_docker_ubuntu.sh  install_ros2_jazzy_ubuntu.sh  install_systemd_services.sh  pi_build_run.sh  run_ack_demo.ps1  run_ack_demo.sh  run_control_visual.ps1  run_linux_serial_demo.sh  run_offline_demo.ps1  run_offline_demo.sh  run_ros2_jazzy_docker.sh  run_task_demo.ps1  run_task_demo.sh  run_udp_demo.ps1  run_udp_demo.sh  run_visual_demo.ps1  uninstall_systemd_services.sh
src/: control_state_writer.cpp  grid_map.cpp  json_utils.cpp  main.cpp  master_node.cpp  mock_stm32.cpp  module_node.cpp  protocol.cpp  sensor_fusion.cpp  serial_port.cpp  stm32_bridge.cpp  udp_socket.cpp
tests/: robot_core_tests.cpp
web/: index.html
