<?xml version="1.0"?>
<package format="3">
  <name>self_reconfig_control</name>
  <version>0.1.0</version>
  <description>ROS2 bridge for the self-reconfigurable robot control prototype.</description>
  <maintainer email="user@example.com">self_reconfig_robot</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
